[package]
name = "dirpurge"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
console = "0.15"
csv = "1.3.1"
env_logger = "0.11.7"
indicatif = "0.17.11"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
trash = "5.2.2"
walkdir = "2.5.0"
zip = "0.6.6"
